# Core-Native-Community-Samples

./: .gitignore  README.md  Samples.sln
AudioLoopBackSample/: .cproject  .project  AudioLoopBackSample.pro  AudioLoopBackSample.vcxproj  AudioLoopBackSample.vcxproj.filters  Makefile  README.txt  bar-descriptor.xml  config.pri
AudioLoopBackSampleToFile/: .cproject  .project  AudioLoopBackSampleToFile.vcxproj  AudioLoopBackSampleToFile.vcxproj.filters  README.txt  bar-descriptor.xml
BBMbpsRegistration/: .cproject  .project  BBMbpsRegistration.vcxproj  BBMbpsRegistration.vcxproj.filters  BbmRegistration.c  BbmRegistration.h  bar-descriptor.xml  common.mk  main.c  readme.txt
BBMbpsUserProfile/: .cproject  .project  BBMbpsUserProfile.vcxproj  BBMbpsUserProfile.vcxproj.filters  BbmRegistration.c  NOTICE  ReadUserProfile.c  ReadUserProfile.h  WriteUserProfile.c  WriteUserProfile.h  bar-descriptor.xml  common.mk  main.c  readme.txt
BtHrmPlugin/: .cproject  .project  BtHrmPlugin.vcxproj  BtHrmPlugin.vcxproj.filters  LICENSE  README.md
NativeAndOpenGLWindows/: NativeAndOpenGLWindows.vcxproj  NativeAndOpenGLWindows.vcxproj.filters  README  bar-descriptor.xml  main.c
NativeBlackBerryIDentityServiceSample/: .cproject  .device  .project  Makefile  README.txt  bar-descriptor.xml  config.pri  ids_cascades_sample_c.pro
RotateText/: .cproject  (+5 more)
ToneGenerator/: .cproject  .project  CMakeLists.txt  NOTICE  README.md  ToneGenerator.vcxproj  ToneGenerator.vcxproj.filters  bar-descriptor.xml
ToneGenerator/arm/o.le-v7/: .so.sym
ToneGenerator/src/: audiopcm.c  audiopcm.h  main.c
(+94 files in other folders)
